[gd_scene load_steps=21 format=2]

[ext_resource path="res://art/app_art/rotating banana/banana_minion_rush/scene.gltf" type="PackedScene" id=1]
[ext_resource path="res://shaders/outline.tres" type="Shader" id=2]
[ext_resource path="res://main/contents_window/script/rotating_banana.gd" type="Script" id=3]
[ext_resource path="res://shaders/offsetshadow.shader" type="Shader" id=4]
[ext_resource path="res://art/fonts/picotron.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sfx/funky town.mp3" type="AudioStream" id=6]
[ext_resource path="res://art/app_art/rotating banana/inspiration.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("scene:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("scene:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true
shader_param/number_of_images = Vector2( 1, 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/offset = Vector2( 5, 5 )
shader_param/modulate = Color( 0, 0, 0, 1 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Viewport2")

[sub_resource type="DynamicFont" id=12]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="rotating_banana" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.85098, 1, 0, 0.231373 )
material = SubResource( 13 )
margin_right = 712.0
margin_bottom = 437.0

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 640, 360 )
own_world = true
transparent_bg = true

[node name="scene" parent="Viewport" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 865.231 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -0.0121995, 0, -0.999926, 0, 1, 0, 0.999926, 0, -0.0121995, -75.8687, 22.0277, 865.231 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 24.6516, 881.147 )
omni_range = 63.5976
omni_attenuation = 3.24901

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( -0.538069, -0.265805, -0.799893, -0.0596728, -0.934583, 0.350704, -0.840786, 0.236435, 0.487009, 0, 0, 865.231 )

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 640, 360 )
transparent_bg = true

[node name="TextureRect" type="TextureRect" parent="Viewport2"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
texture = SubResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.172549 )
margin_top = 5.0
margin_right = 403.0
margin_bottom = 234.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.0
margin_top = -181.0
margin_right = 314.0
margin_bottom = 179.0
mouse_filter = 2
texture = SubResource( 5 )

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -31.0
margin_right = 144.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Banana music: On"
align = 0

[node name="funky_town_mp3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
